--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "concurrently \"nodemon index.js\" \"cd client && yarn start\""
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
