--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "eslint": "^8.52.0",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
+    "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
