--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
+    "react-router-dom": "^6.17.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
   },
