--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.6.3",
     "nodemon": "^3.0.1",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0",
     "react-router-dom": "^6.17.0",
     "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
