--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,11 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
+    "@types/lodash": "^4.14.175",
+    "@types/react-redux": "^7.1.19",
+    "@types/redux": "^3.6.0",
+    "@types/redux-form": "^8.3.2",
+    "@types/redux-thunk": "^2.1.0",
     "axios": "^1.5.1",
     "eslint": "^8.52.0",
     "react": "^18.2.0",
@@ -26,7 +31,12 @@
     "react-router-dom": "^5.3.0",
     "socket.io-client": "^4.7.2",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "react-redux": "^7.2.4",
+    "web-vitals": "^2.1.4",
+    "lodash": "^4.17.21",
+    "redux": "^4.1.1",
+    "redux-form": "^8.3.7",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
