--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "11",
-    "@emotion/styled": "11",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "@mui/system": "^5.14.14",
@@ -12,31 +12,31 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/react-router-dom": "^5.3.1",
     "@types/axios": "^0.14.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.175",
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
-    "@types/lodash": "^4.14.175",
     "@types/react-redux": "^7.1.19",
+    "@types/react-router-dom": "^5.3.1",
     "@types/redux": "^3.6.0",
     "@types/redux-form": "^8.3.2",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^1.5.1",
     "eslint": "^8.52.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-router-dom": "^5.3.0",
-    "socket.io-client": "^4.7.2",
-    "typescript": "^4.9.5",
     "react-redux": "^7.2.4",
-    "web-vitals": "^2.1.4",
-    "lodash": "^4.17.21",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "5.0.1",
     "redux": "^4.1.1",
     "redux-form": "^8.3.7",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.7.2",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
