--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "back": "nodemon index.js",
-    "dev": "concurrently \"nodemon index.js\" \"cd client && yarn start\""
+    "dev": "concurrently \"nodemon index.js\" \"cd client && yarn start\"",
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -17,15 +17,16 @@
     "eslint": "^8.52.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^7.6.3",
     "nodemon": "^3.0.1",
     "react-router-dom": "^6.17.0",
     "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2",
-    "jsonwebtoken": "^8.5.1"
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
+    "eslint-plugin-jest": "^27.4.3",
     "jest": "^29.7.0"
   }
 }
