--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "back": "nodemon index.js",
-    "dev": "concurrently \"nodemon index.js\" \"cd client && yarn start\"",
+    "dev": "concurrently \"nodemon index.js\" \"cd client && yarn start\""
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
