--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "back": "nodemon index.js",
-    "dev": "concurrently \"nodemon index.js\" \"cd client && yarn start\"",
+    "dev": "concurrently \"nodemon index.js\" \"cd client && yarn start\""
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -22,7 +22,10 @@
     "nodemon": "^3.0.1",
     "react-router-dom": "^6.17.0",
     "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
